--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </p>
             </em>
             <br>
-            <h4 style="margin-left: 40%;">
+            <h4 style="margin-left: 30%;">
                 <em>Forever yours,<br>Kaii❤ </em>
             </h4>
         </div>
@@ -112,7 +112,7 @@
             <button onclick="document.getElementById('audio').play()">Play Audio</button>
             <audio id="audio" autoplay>
                 <source src="audio.mp3" type="audio/mpeg">
-                Your browser deos not support the audio element.
+                Your browser does not support the audio element.
             </audio>
             <br>
             <br>
