--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
             <em>
             <h1>Unwritten Chapters of Beauty</h1>
             <p>                
-                   She was beautiful, but not like those girls in the magazines. She was beautiful, for the<br>
-                way she thought. She was beautiful, just like the sparkle in her eyes when she talked<br>
-                about something she loves. She was beautiful, for her ability to make other people smile,<br>
-                even if she was the complete opposite. No, she wasn't beautiful for something as temporary<br>
-                as her looks. She was beautiful, not just her body but also deep down to her soul.<br>
+                &nbsp;&nbsp;&nbsp;She was beautiful,&nbsp;but not like those girls in the magazines.&nbsp;She was beautiful,&nbsp;for the<br>
+                way she thought.&nbsp;She was beautiful,&nbsp;just like the sparkle in her eyes when she talked<br>
+                about something she loves.&nbsp;She was beautiful, for her ability to make other people smile,<br>
+                even if she was the complete opposite.&nbsp;No,&nbsp;she wasn't beautiful for something as temporary<br>
+                as her looks.&nbsp;She was beautiful,&nbsp;not just her body but also deep down to her soul.<br>
                 <br>
-                   Even if loving you felt like a book out in the wind, even if the pages turned too fast for<br>
-                me to read, I'd still choose you. Even if I didn't get the chance to adore you, to trace your<br>
-                lines with my fingertip and re-read my favorite parts, I'd still choose you. To live the story<br>
-                I know we're meant to create together, where each chapter unfolds with new adventures<br>
-                and joy. I look forward to the many pages yet to be written in our beautiful tale, Tangi.
+                &nbsp;&nbsp;&nbsp;Even if loving you felt like a book out in the wind,&nbsp;even if the pages turned too fast for<br>
+                me to read,&nbsp;I'd still choose you.&nbsp;Even if I didn't get the chance to adore you,&nbsp;to trace your<br>
+                lines with my fingertip and re-read my favorite parts,&nbsp;I'd still choose you.&nbsp;To live the story<br>
+                I know we're meant to create together,&nbsp;where each chapter unfolds with new adventures<br>
+                and joy.&nbsp;I look forward to the many pages yet to be written in our beautiful tale,&nbsp;Tangi.
             </p>
             </em>
             <br>
             <h4 style="margin-left: 30%;">
-                <em>Forever yours,<br>Kaii❤ </em>
+                <em>Forever yours,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kaii❤ </em>
             </h4>
         </div>
         <div class="others">
