--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </em>
             <br>
             <h4 style="margin-left: 30%;">
-                <em>Forever yours,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kaii❤ </em>
+                <em>Forever yours,<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kaii❤ </em>
             </h4>
         </div>
         <div class="others">
