--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
             <em>
             <h1>Unwritten Chapters of Beauty</h1>
             <p>                
-                &nbsp;&nbsp;&nbsp;She was beautiful,&nbsp;but not like those girls in the magazines.&nbsp;She was beautiful,&nbsp;for the<br>
-                way she thought.&nbsp;She was beautiful,&nbsp;just like the sparkle in her eyes when she talked<br>
-                about something she loves.&nbsp;She was beautiful, for her ability to make other people smile,<br>
-                even if she was the complete opposite.&nbsp;No,&nbsp;she wasn't beautiful for something as temporary<br>
+                &nbsp;&nbsp;&nbsp;She was beautiful,&nbsp;but not like those girls in the magazines.&nbsp;She was beautiful,&nbsp;for the
+                way she thought.&nbsp;She was beautiful,&nbsp;just like the sparkle in her eyes when she talked
+                about something she loves.&nbsp;She was beautiful, for her ability to make other people smile,
+                even if she was the complete opposite.&nbsp;No,&nbsp;she wasn't beautiful for something as temporary
                 as her looks.&nbsp;She was beautiful,&nbsp;not just her body but also deep down to her soul.<br>
                 <br>
-                &nbsp;&nbsp;&nbsp;Even if loving you felt like a book out in the wind,&nbsp;even if the pages turned too fast for<br>
-                me to read,&nbsp;I'd still choose you.&nbsp;Even if I didn't get the chance to adore you,&nbsp;to trace your<br>
-                lines with my fingertip and re-read my favorite parts,&nbsp;I'd still choose you.&nbsp;To live the story<br>
-                I know we're meant to create together,&nbsp;where each chapter unfolds with new adventures<br>
+                &nbsp;&nbsp;&nbsp;Even if loving you felt like a book out in the wind,&nbsp;even if the pages turned too fast for
+                me to read,&nbsp;I'd still choose you.&nbsp;Even if I didn't get the chance to adore you,&nbsp;to trace your
+                lines with my fingertip and re-read my favorite parts,&nbsp;I'd still choose you.&nbsp;To live the story
+                I know we're meant to create together,&nbsp;where each chapter unfolds with new adventures
                 and joy.&nbsp;I look forward to the many pages yet to be written in our beautiful tale,&nbsp;Tangi.
             </p>
             </em>
@@ -105,7 +105,7 @@
         <div class="others">
             <img src="colet.jpeg" alt="colii" width="220px" height="280px">  
             <p>
-                <em>"<b>I love you</b> more than there are<br>
+                <em>"<b>I love you</b> more than there are
                 stars in the sky and fish in the sea."</em>
             </p>
             <br>
