--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="others">
             <img src="colet.jpeg" alt="colii" width="220px" height="280px">  
             <p>
-                <em>"<b>I love you</b> more than there are
+                <em>"<b>I loved you</b> more than there are
                 stars in the sky and fish in the sea."</em>
             </p>
             <br>
